WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309780
IDB: ASSERT(spaceCheckResult == SpaceCheckResult::Pass) failed in WebCore::IDBServer::UniqueIDBDatabase::abortTransaction()
https://bugs.webkit.org/show_bug.cgi?id=309780
Summary
IDB: ASSERT(spaceCheckResult == SpaceCheckResult::Pass) failed in WebCore::ID...
Claudio Saavedra
Reported
2026-03-12 04:58:00 PDT
This is hit consistently in the TestInspector WKGTK tests. The stacktrace for it is the following: #0 0x00007f1f0f5067c6 in WebCore::IDBServer::UniqueIDBDatabase::abortTransaction(WebCore::IDBServer::UniqueIDBDatabaseTransaction&, WTF::Function<void (WebCore::IDBError const&)>&&, WebCore::IDBServer::UniqueIDBDatabase::SpaceCheckResult) () from /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 [Current thread is 1 (Thread 0x7f1eaeff96c0 (LWP 2239955))] (gdb) back #0 0x00007f1f0f5067c6 in WebCore::IDBServer::UniqueIDBDatabase::abortTransaction(WebCore::IDBServer::UniqueIDBDatabaseTransaction&, WTF::Function<void (WebCore::IDBError const&)>&&, WebCore::IDBServer::UniqueIDBDatabase::SpaceCheckResult) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #1 0x00007f1f0f5069de in WTF::Detail::CallableWrapper<WebCore::IDBServer::UniqueIDBDatabase::abortTransaction(WebCore::IDBServer::UniqueIDBDatabaseTransaction&, WTF::Function<void (WebCore::IDBError const&)>&&, WebCore::IDBServer::UniqueIDBDatabase::SpaceCheckResult)::{lambda(bool)#1}, void, bool>::call(bool) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #2 0x00007f1f0c7be75b in WTF::CompletionHandler<void (bool)>::operator()(bool) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #3 0x00007f1f0f5064de in WebCore::IDBServer::UniqueIDBDatabase::abortTransaction(WebCore::IDBServer::UniqueIDBDatabaseTransaction&, WTF::Function<void (WebCore::IDBError const&)>&&, WebCore::IDBServer::UniqueIDBDatabase::SpaceCheckResult) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #4 0x00007f1f0f506b75 in WebCore::IDBServer::UniqueIDBDatabaseConnection::abortTransactionWithoutCallback(WebCore::IDBServer::UniqueIDBDatabaseTransaction&) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #5 0x00007f1f0f509d91 in WebCore::IDBServer::UniqueIDBDatabaseTransaction::abortWithoutCallback() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #6 0x00007f1f0f50ae45 in WebCore::IDBServer::UniqueIDBDatabase::immediateClose() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #7 0x00007f1f0caf5862 in WebKit::IDBStorageManager::~IDBStorageManager() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #8 0x00007f1f0caf596d in WebKit::IDBStorageManager::~IDBStorageManager() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #9 0x00007f1f0cb442c8 in WebKit::OriginStorageManager::StorageBucket::~StorageBucket() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #10 0x00007f1f0cb48f92 in WebKit::OriginStorageManager::~OriginStorageManager() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #11 0x00007f1f0cb49188 in WTF::HashTable<WebCore::ClientOrigin, WTF::KeyValuePair<WebCore::ClientOrigin, std::unique_ptr<WebKit::OriginStorageManager, std::default_delete<WebKit::OriginStorageManager> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ClientOrigin, std::unique_ptr<WebKit::OriginStorageManager, std::default_delete<WebKit::OriginStorageManager> > > >, WTF::DefaultHash<WebCore::ClientOrigin>, WTF::HashMap<WebCore::ClientOrigin, std::unique_ptr<WebKit::OriginStorageManager, std::default_delete<WebKit::OriginStorageManager> >, WTF::DefaultHash<WebCore::ClientOrigin>, WTF::HashTraits<WebCore::ClientOrigin>, WTF::HashTraits<std::unique_ptr<WebKit::OriginStorageManager, std::default_delete<WebKit::OriginStorageManager> > >, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<WebCore::ClientOrigin>, WTF::FastMalloc>::deallocateTable(WTF::KeyValuePair<WebCore::ClientOrigin, std::unique_ptr<WebKit::OriginStorageManager, std::default_delete<WebKit::OriginStorageManager> > >*) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #12 0x00007f1f0cb49849 in WTF::Detail::CallableWrapper<WebKit::NetworkStorageManager::close(WTF::CompletionHandler<void ()>&&)::{lambda()#1}, void>::call() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #13 0x00007f1f06998086 in WTF::RunLoop::performWork() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #14 0x00007f1f06ab9a3d in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #15 0x00007f1f06ac1eca in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #16 0x00007f1f0302b45e in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #17 0x00007f1f0302b6d0 in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #18 0x00007f1f06abd262 in WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #19 0x00007f1f06abd9ca in WTF::RunLoop::run() () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #20 0x00007f1f06a0c425 in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #21 0x00007f1f06ac9e9d in WTF::wtfThreadEntryPoint(void*) () at /sdk/webkit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #22 0x00007f1f07e8aaa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #23 0x00007f1f07f17c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2026-03-12 05:10:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60450
EWS
Comment 2
2026-03-13 17:32:48 PDT
Committed
309248@main
(5861503be1bb): <
https://commits.webkit.org/309248@main
> Reviewed commits have been landed. Closing PR #60450 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-13 17:33:12 PDT
<
rdar://problem/172522262
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug