Source/WebKit/NetworkProcess/storage/IDBStorageManager.h
@@ -85,6 +85,7 @@ private:
     const CheckedRef<IDBStorageRegistry> m_registry;
     QuotaCheckFunction m_quotaCheckFunction;
     HashMap<WebCore::IDBDatabaseIdentifier, std::unique_ptr<WebCore::IDBServer::UniqueIDBDatabase>> m_databases;
+    bool m_isClosing { false };
 };
 
 } // namespace WebKit
